fix(mainui): z indexes for player video to be behind playlist drawer
- homepage mini menu should be behind video overlay
- adjust max widths and heights of video

--- a/src/app/(main)/_css/main.css
+++ b/src/app/(main)/_css/main.css
@@ -26,6 +26,7 @@
   --tw-logo-globe--animation-duration: 30s;
 
   --z-ui: 1000;
-  --z-ui-player: 1001;
+  --z-ui-player: 1002;
+  --z-ui-player-video: 1001;
   --z-dialog: 10000;
 }
